k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-devops-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flask-devops
  template:
    metadata:
      labels:
        app: flask-devops
    spec:
      containers:
        - name: flask-devops-container
          image: abhishek7j/flask-devops-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
