k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-devops-service
spec:
  type: NodePort
  selector:
    app: flask-devops
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
